[package]
name = "tors"
version = "0.0.3-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
crossterm = "0.24.0"
anyhow = "1.0.60"
unicode-width = "0.1.9"
sled = "0.34.7"
serde = { version = "1.0.143", features = ["derive"] }
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4", "macro-diagnostics"] }
chrono = {version = "0.4.20", features = ["serde"] }
rayon = "1.5.3"
dirs = "4.0.0"