[package]
name = "tors"
version = "0.0.3-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.25.0"
anyhow = "1.0.62"
unicode-width = "0.1.9"
sled = "0.34.7"
serde = { version = "1.0.144", features = ["derive"] }
bincode = { version = "2.0.0-rc.1", features = ["serde"] }
nanoid = "0.4.0"
chrono = {version = "0.4.22", features = ["serde"] }
rayon = "1.5.3"
dirs = "4.0.0"
tors-database = { path = "../database" }